# vp415-emulator

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
fpga/: .gitignore
fpga/beebthru/: CMakeLists.txt
fpga/beebthru/pcf/: ice40hx8k-evb.pcf
fpga/beebthru/src/: aivclockpll.v  asyncsyncronizer.v  beebthru.v  csyncprescaler.v  hsyncseparator.v  pulsestretch.v  rgb111to666.v  syncregenerator.v  syncseparator.v  vsyncseparator.v
fpga/videothru/pcf/: ice40hx8k-evb.pcf
fpga/videothru/src/: synccombiner.v  videomixer.v
fpga/vp415-fpga/: CMakeLists.txt
fpga/vp415-fpga/pcf/: ice40hx8k-evb.pcf
fpga/vp415-fpga/src/: aivpixeltracker.v  aivvideo.v  csyncgenerator.v  framebuffer.v  pipixelclk.v  pipixeltracker.v  pivideo.v  pixeltracker.v  rgb111to666.v  statusleds.v  syncregenerator.v  syncsignals.v  testcard1bit.v  videomixer.v  vp415-fpga.v
fpga_test/: .gitignore  CMakeLists.txt
fpga_test/aivin/: CMakeLists.txt
fpga_test/aivin/pcf/: ice40hx8k-evb.pcf
fpga_test/aivin/src/: aiv_framebuffer.v  aiv_input_sync.v  aiv_pixel_tracker.v  aiv_sync_separator.v  aiv_to_rgb666.v  aivin.v  pal_framestart.v  pal_testcard.v  pi_pixel_clock_pll.v  pi_pixel_tracker.v  status_leds.v
fpga_test/beebthru/src/: beebthru.v  csyncgenerator.v  pipixelclk.v  pulsestretch.v
fpga_test/sramfb/: CMakeLists.txt
fpga_test/sramfb/pcf/: ice40hx8k-evb.pcf
fpga_test/sramfb/src/: framebuffer.v  pipixelclk.v  sramfb.v  statusleds.v  testgen.v
fpga_test/videothru/: CMakeLists.txt
fpga_test/videothru/src/: fieldtracker.v  frametracker.v  linetracker.v  nreset.v  pixelclockpll.v  testcard576i.v  videothru.v
kicad/: .gitignore
kicad/olimex-ice40-pi-header/: iCE40HX8K-EVB.kicad_sym  olimex-ice40-pi-header.kicad_pcb  olimex-ice40-pi-header.kicad_pro  olimex-ice40-pi-header.kicad_sch  sym-lib-table
kicad/olimex-ice40-pi-header/Gerbers/: olimex-ice40-pi-header-B_Cu.gbl  olimex-ice40-pi-header-B_Mask.gbs  olimex-ice40-pi-header-B_Paste.gbp  olimex-ice40-pi-header-B_Silkscreen.gbo  olimex-ice40-pi-header-Edge_Cuts.gm1  olimex-ice40-pi-header-F_Cu.gtl  olimex-ice40-pi-header-F_Mask.gts  olimex-ice40-pi-header-F_Paste.gtp  olimex-ice40-pi-header-F_Silkscreen.gto  olimex-ice40-pi-header-NPTH-drl_map.gbr  olimex-ice40-pi-header-NPTH.drl  olimex-ice40-pi-header-PTH-drl_map.gbr  olimex-ice40-pi-header-PTH.drl
kicad/olimex-ice40-scart-header/: MAX662A.kicad_sym  RS_DIN_Socket.kicad_sym  SCART.kicad_sym  audio_filter.kicad_sch  fp-lib-table  iCE40HX8K-EVB.kicad_sym  lmh1981.kicad_sym  nc7wz16.kicad_sym  olimex-ice40-scart-header.kicad_pcb  olimex-ice40-scart-header.kicad_pro  olimex-ice40-scart-header.kicad_sch  rgb_dac.kicad_sch  rgb_input.kicad_sch  sym-lib-table
kicad/olimex-ice40-scart-header/Local_footprints.pretty/: 6P DIN Socket RS Pro.kicad_mod  HSM_C0381-21RYATB0R.kicad_mod
kicad/olimex-ice40-scart-header/gerbers/: olimex-ice40-scart-header-B_Cu.gbl  olimex-ice40-scart-header-B_Mask.gbs  olimex-ice40-scart-header-B_Paste.gbp  olimex-ice40-scart-header-B_Silkscreen.gbo  olimex-ice40-scart-header-Edge_Cuts.gm1  olimex-ice40-scart-header-F_Cu.gtl  olimex-ice40-scart-header-F_Mask.gts  olimex-ice40-scart-header-F_Paste.gtp  olimex-ice40-scart-header-F_Silkscreen.gto  olimex-ice40-scart-header-GND_Cu.g3  olimex-ice40-scart-header-NPTH-drl_map.gbr  olimex-ice40-scart-header-NPTH.drl  olimex-ice40-scart-header-PTH-drl_map.gbr  olimex-ice40-scart-header-PTH.drl  olimex-ice40-scart-header-PWR_Cu.g2
kicad/scsi-usb/: fp-lib-table  scsi-usb.kicad_pcb  scsi-usb.kicad_pro  scsi-usb.kicad_sch  sym-lib-table
pico/: CMakeLists.txt
pico/picoscsi/: CMakeLists.txt
pico/picoscsi/src/: debug.c  debug.h  fcode.c  fcode.h  filesystem.c  filesystem.h  hostadapter.c  hostadapter.h  main.c  picom.c  picom.h  scsi.c  scsi.h  statusled.c  statusled.h
pico/sasi2usb/: CMakeLists.txt
pico/sasi2usb/src/: main.c  usb.c  usb.h  usb_eps.c  usb_eps.h
raspberry-pi/: .gitignore
raspberry-pi/config/: config.txt
raspberry-pi/vp415-host/: CMakeLists.txt  efmdata.cpp  efmdata.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  metadata.cpp  metadata.h  picocoms.cpp  picocoms.h  usbdevice.cpp  usbdevice.h
raspberry-pi/vp415-host/cmake_modules/: FindLibUSB.cmake
